--- a/_config.yml
+++ b/_config.yml
@@ -20,17 +20,15 @@ resume_contact_email:
 resume_looking_for_work:        "yes"
 
 # Resume social links
-# delete any of these you don't intend to use
-resume_options:
-  resume_pdf_URL:               "insert URL here"
+# uncomment the options you wish to display, and add your own URL
+resume_social_links:
   resume_github_url:            "https://github.com/jglovier/resume-template"
   resume_twitter_url:           "http://twitter.com/jglovier"
-  resume_print_url:             "insert print URL here"
-  resume_dribbble_url:          "insert Dribbble URL here"
-  resume_linkedin_url:          "insert LinkedIn URL here"
-  resume_facebook_url:          "insert Facebook URL here"
-  resume_website_url:           "insert your website URL here"
-  resume_instagram_url:         "insert your Instagram URL here"
+  resume_dribbble_url:          "https://dribbble.com/jag"
+  # resume_facebook_url:          "insert Facebook URL here"
+  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
+  # resume_instagram_url:         "insert your Instagram URL here"
+  resume_website_url:           "http://joelglovier.com"
 
 # Design settings
 resume_theme:                   default
