--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ sass:
   style: compressed
 
 # Resume settings
+resume_avatar:                  "true"
 resume_name:                    "Homer J. Simpson"
 resume_title:                   "Nuclear Safety Inspector"
 resume_contact_email:
