--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,21 @@ resume_name:                    "Homer J. Simpson"
 resume_title:                   "Nuclear Safety Inspector"
 resume_contact_email:
   "homerjsimpson@youremailaddress.com"
+
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
 # or remove the resume_looking_for_work option entirely
 # to leave blank
 resume_looking_for_work:        "yes"
+
+# Decide which sections to use; set to false or
+# comment out to hide (Experience is not shown
+# because it is the only required section)
+resume_section_education:       "true"
+resume_section_projects:        "true"
+resume_section_skills:          "true"
+resume_section_recognition:     "true"
+resume_section_links:           "true"
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
