--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ resume_contact_email:
 # to leave blank
 resume_looking_for_work:        "yes"
 
-# Decide which sections to use; set to false or
+# Decide which sections to use
 # comment out to hide (Experience is not shown
 # because it is the only required section)
-resume_section_education:       "true"
-resume_section_projects:        "true"
-resume_section_skills:          "true"
-resume_section_recognition:     "true"
-resume_section_links:           "true"
+resume_section_education:       true
+resume_section_projects:        true
+resume_section_skills:          true
+resume_section_recognition:     true
+resume_section_links:           true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
