--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ resume_section_projects:        true
 resume_section_skills:          true
 resume_section_recognition:     true
 resume_section_links:           true
+resume_section_associations:    true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
