--- a/_config.yml
+++ b/_config.yml
@@ -47,4 +47,4 @@ resume_theme:                   default
 
 # Note: when editing locally, remember to restart
 # your Jekyll server when you edit this file. Changes
-# to _congif.yml are only recognized when the server starts
+# to _config.yml are only recognized when the server starts
