--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Jekyll Resume Template"
-description: "A resume template for Jekyll and GitHub Pages sites."
+title: "Javier Gómez Resume"
+description: "Marketing Technologist"
 
 # Build settings
 markdown: kramdown
@@ -34,7 +34,7 @@ resume_section_associations:    true
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/javierorange/resume-template"
+  resume_github_url:            "https://github.com/javierorange/"
   resume_twitter_url:           "http://twitter.com/javiermardona"
   #resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
