--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Javier Gómez"
-resume_title:                   "Marketing Technologist"
+resume_title:                   "Marketing Technologist Knight"
 resume_contact_email:
   "javierorange@gmail.com"
 
