--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ resume_looking_for_work:        "yes"
 # Decide which sections to use
 # comment out to hide (Experience is not shown
 # because it is the only required section)
+resume_section_experience:      true
 resume_section_education:       true
 resume_section_projects:        true
 resume_section_skills:          true
