--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,8 @@
 # Skills
-# Donut design
-- skill: Donut design
-  description: Sprinkle art, icing design, eclair management, taste testing, donut/coffee pairing research
+# Software Languages
+- skill: Languages
+  description: Python/C#/C++/Go/Java/JavaScript/Node.js
 
-# Craft beer brewing
-- skill: Craft beer brewing
-  description: Hops inspection, brew testing, distribution management, bottle label design, festival and event management
-
-# Family leadership
-- skill: Family leadership
-  description: Bread winning, conflict resolution, couch inspection, TV longevity testing
+# Tools
+- skill: Tools
+  description: Git/Mysql/AWS/MongoDB/ElasticSearch
