--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,21 @@
 # Degree
-- degree: Associates Degree, Business Management
-  uni: Springfield College
-  year: 1984 &mdash; 1986
-  awards: Quickest to fall asleep
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- organization: 8200 intelligence unit
+  courses:
+      - name: Project Management Training
+        year: 2014
+      - name: Team Leader Training
+        year: 2013
+
+- organization: John Bryce
+  courses:
+      - name: Advanced C++
+        year: 2011
+
+- organization: IDF
+  courses:
+      - name: Intelligence Officers Training
+        year: 2012
+      - name: Win32 API
+        year: 2011
+      - name: MAMRAM
+        year: 2009
