--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,12 @@
-# Degree
-- degree: Associates Degree, Business Management
-  uni: Springfield College
-  year: 1984 &mdash; 1986
-  awards: Quickest to fall asleep
-  summary: If you had any meaningful roles at college, feel free to write about them here
+# Marquette Undergrad
+- degree: Bachelor of Science, Information Technology
+  uni: Marquette University
+  year: 2011 &mdash; 2015
+  awards: Cum Laude
+  summary:
+
+- degree: Master of Science, Computing
+  uni: Marquette University
+  year: 2016 &mdash; 2018
+  awards:
+  summary: Specialized in Information Security and Cyber Assurance
