Initial commit. Edit education, experience, skills

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,4 @@
 # Degree
-- degree: Associates Degree, Business Management
-  uni: Springfield College
-  year: 1984 &mdash; 1986
-  awards: Quickest to fall asleep
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: Scientific High School Diploma
+  uni: Scientific High School "Galileo Galilei", Lanciano, IT
+  year: 2009 &mdash; 2014
