--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,5 @@
 # Interests
-- description: Drinking beer.
-- description: Grand Funk Railroad.
-- description: Flanders' lawnmower.
+- description: Music.
+- description: Art.
+- description: Reading.
+- description: Drawing.
