--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,53 @@
 # Skills
-# Donut design
-- skill: Donut design
-  description: Sprinkle art, icing design, eclair management, taste testing, donut/coffee pairing research
+- skill: Systems
+  description: <ul class="resume-item-list">
+    <li>Configuration and installation of hardware / software systems;</li>
+    <li>Maintenance, support, backup and restore;</li>
+    <li>log analysis, troubleshooting;</li>
+    <li>Configuring LAMP systems, XAMPP, WAMP;</li>
+    <li>Microsoft Windows 7, 8.1, 10;</li>
+    <li>Microsoft Windows Server 2012 R2;</li>
+    <li>Ubuntu 4.14 LTS, 15.10, 16.04 LTS;</li>
+    <li>Ubuntu Server LTS, CentOS 7.</li>
+    </ul>
 
-# Craft beer brewing
-- skill: Craft beer brewing
-  description: Hops inspection, brew testing, distribution management, bottle label design, festival and event management
+- skill: Networking
+  description: <ul class="resume-item-list">
+    <li>Understanding and configuration of a network;</li>
+    <li>Knowledge, configuration and maintenance of the hardware components of a network;</li>
+    <li>Configuration and administration of Fortinet (FortiGate, FortiClient);</li>
+    <li>Set up and manage VPN systems (SSL).</li>
 
-# Family leadership
-- skill: Family leadership
-  description: Bread winning, conflict resolution, couch inspection, TV longevity testing
+- skill: Virtualization
+  description: <ul class="resume-item-list">
+    <li>Design, implementation and maintenance of vSphere-ESXi 6.0 server infrastructure;</li>
+    <li>Configuration and deployment of virtual machines;</li>
+    <li>Backup and creating snapshots, restore the same;</li>
+    <li>Using vCenter, VMware Workstation 12 Pro, VMware Player, Oracle VirtualBox.</li>
+
+- skill: Programming
+  description: <ul class="resume-item-list">
+    <li>HTML/CSS;</li>
+    <li>JavaScript, TypeScript;</li>
+    <li>jQuery;</li>
+    <li>Bootstrap;</li>
+    <li>PHP;</li>
+    <li>Wordpress;</li>
+    <li>Basic knowledge of C#, C++;</li>
+    <li>Basic knowledge of bash scripting.</li>
+
+- skill: Databases
+  description: <ul class="resume-item-list">
+    <li>MySQL;</li>
+    <li>SQL Server 2012/2014.</li>
+
+- skill: Cloud Computing
+  description: <ul class="resume-item-list">
+    <li>Microsoft Azure platform.</li>
+
+- skill: Other
+  description: <ul class="resume-item-list">
+    <li>Expertise in the use of Git and SVN version control systems;</li>
+    <li>Excellent skills in the use of remote support software LogMeIn, TeamViewer, AnyDesk;</li>
+    <li>Basic knowledge of Photoshop and GIMP software;</li>
+    <li>Basic knowledge of Unity graphics engine Unreal Engine 5.5 and 4.13.</li>
