--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "mattups - resume"
+title: "Mattia Tupone resume"
 description: "mattups - resume"
 
 # Build settings
@@ -15,7 +15,7 @@ resume_title:                   "SysAdmin/IT Technician"
 resume_contact_email:
   "tupone.mattia@gmail.com"
 resume_header_contact_info: "Lanciano (CH), Italy | tupone.mattia@gmail.com"
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>"
+resume_header_intro: "<p>Just a young guy who loves IT, programming and tries to become more and more professional.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
