--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,5 +1,5 @@
 # Interests
-- description: Music.
-- description: Art.
-- description: Reading.
+- description: Music;
+- description: Art;
+- description: Reading;
 - description: Drawing.
