--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -50,4 +50,4 @@
     <li>Expertise in the use of Git and SVN version control systems;</li>
     <li>Excellent skills in the use of remote support software LogMeIn, TeamViewer, AnyDesk;</li>
     <li>Basic knowledge of Photoshop and GIMP software;</li>
-    <li>Basic knowledge of Unity graphics engine Unreal Engine 5.5 and 4.13.</li>
+    <li>Basic knowledge of Unity3D graphics engine and Unreal Engine.</li>
