Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -52,3 +52,5 @@ resume_theme:                   default
 # Note: when editing locally, remember to restart
 # your Jekyll server when you edit this file. Changes
 # to _config.yml are only recognized when the server starts
+
+theme: jekyll-theme-cayman
