--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,6 @@
 # Jobs
-# SysAdmin/IT Technician
+# SysAdmin/DevOps
 - company: CIS - Consorzio Italia Servizi
-  position: SysAdmin/IT Technician
+  position: SysAdmin/DevOps
   duration: Feb, 2016 &mdash; Present
   summary: Management, implementation, maintenance and updating of corporate IT infrastructures and in separate location.
