--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,10 @@ resume_title:                   "SysAdmin/DevOps"
 resume_contact_email:
   "tupone.mattia@gmail.com"
 resume_header_contact_info: "Lanciano (CH), Italy | tupone.mattia@gmail.com"
-resume_header_intro: "<p>I'm a 22 years old SysAdmin/DevOps based in Italy with the passion for IT systems and coding. Moving across servers, code and deployments, i started working as a professional in 2016 gaining and maturing experience day-by-day, always looking for new technologies and methods.
-Skilled with virtualization technologies as VMware vSphere Suite and Microsoft Windows/Linux ecosystems.</p>"
+resume_header_intro: "<p>I'm a 22 years old SysAdmin/DevOps based in Italy with the passion for IT systems and coding.
+Moving across servers, code and deployments, i started working as a professional in 2016 gaining and maturing experience
+day-by-day, always looking for new technologies and methods. Experienced and certified by VMware on virtualization
+technologies and skilled in Microsoft/Linux environments</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
