--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -3,3 +3,4 @@
   organization: VMware
   year: 2017
   summary: ---
+  img: <img src="images/cert.jpg" alt="my photo" class="avatar no-print" itemprop="image">
