--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ resume_section_experience:      true
 resume_section_education:       true
 #resume_section_projects:        true
 resume_section_skills:          true
-#resume_section_recognition:     true
+resume_section_recognition:     true
 #resume_section_links:           true
 #resume_section_associations:    true
 resume_section_interests:       true
