--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -2,5 +2,4 @@
 - award: VMware Certified Professional 6 - Data Center Virtualization
   organization: VMware
   year: 2017
-  summary: ---
-  img: <img src="images/cert.jpg" alt="my photo" class="avatar no-print" itemprop="image">
+  summary:
