Updated recognitions section

--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,5 +1,6 @@
 # Recognitions
 - award: VMware Certified Professional 6 - Data Center Virtualization
+  code: VCP6-DCV
   organization: VMware
   year: 2017
   summary:
