--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,7 @@ sass:
 resume_avatar:                  "true"
 resume_name:                    "Mattia Tupone"
 resume_title:                   "SysAdmin/DevOps"
-resume_contact_email:
-  "tupone.mattia@gmail.com"
+resume_contact_email:           "tupone.mattia@gmail.com"
 resume_header_contact_info: "Lanciano (CH), Italy | tupone.mattia@gmail.com"
 resume_header_intro: "<p>I'm a 22 years old SysAdmin/DevOps based in Italy with the passion for IT systems and coding.
 Moving across servers, code and deployments, i started working as a professional in 2016 gaining and maturing experience
@@ -41,8 +40,8 @@ resume_section_interests:       true
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
   resume_github_url:            "https://github.com/mattups"
-  #resume_twitter_url:           "https://twitter.com/mattia_tupone"
-  #resume_dribbble_url:          "https://dribbble.com/jag"
+  # resume_twitter_url:           "https://twitter.com/mattia_tupone"
+  # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/mattia-tupone-660450a6/"
   # resume_instagram_url:         "insert your Instagram URL here"
