--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -59,6 +59,6 @@
 - skill: Other
   description: <ul class="resume-item-list">
     <li>Proficient with Ubuntu (LTS), Debian, CentOS 7, Windows 7/10, Windows Server 2012 R2;</li>
-    <li>Basic knowledge of Adobe Photoshop, Adobe Illustrator and GIMP;</li>
+    <li>Basic knowledge of Adobe Photoshop, Adobe Illustrator;</li>
     <li>Basic knowledge of Unity3D graphics engine and Unreal Engine.</li>
     </ul>
