Updated Skills and Recognitions

--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -3,8 +3,8 @@
   organization: VMware
   year: 2017
   summary: <ul class="resume-item-list">
-    <li>Certification Date: Saturday, September 16, 2017</li>
-    <li>Valid Through: Monday, September 16, 2019</li>
-    <li>Candidate ID: VMW-02120218G-00616311</li>
-    <li>Renewal Date: Saturday, September 16, 2017</li>
+    <li>Certification Date - Saturday, September 16, 2017</li>
+    <li>Valid Through - Monday, September 16, 2019</li>
+    <li>Candidate ID - VMW-02120218G-00616311</li>
+    <li>Renewal Date - Saturday, September 16, 2017</li>
   </ul>
