Updated Skills and Recognitions

--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -4,5 +4,5 @@
   year: 2017
   summary:  <p>Certification Date - Saturday, September 16, 2017<br>
                Valid Through - Monday, September 16, 2019<br>
-               Candidate ID - VMW-02120218G-00616311<br>>
+               Candidate ID - VMW-02120218G-00616311<br>
                Renewal Date - Saturday, September 16, 2017</p>
