--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -44,7 +44,7 @@
     <li>Amazon AWS.</li>
     </ul>
 
-- skill: Deploying Tools
+- skill: Deployment Tools
   description: <ul class="resume-item-list">
     <li>Docker.</li>
     </ul>
