--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Associates Degree, Business Management
-  uni: Springfield College
-  year: 1984 &mdash; 1986
-  awards: Quickest to fall asleep
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: Bachelor's Degree, Statistics and Operations Research
+  uni: University of Illinois - Chicago
+  year: 2009
+  #awards: Quickest to fall asleep
+  #summary: If you had any meaningful roles at college, feel free to write about them here
