--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Jekyll Resume Template"
-description: "A resume template for Jekyll and GitHub Pages sites."
+title: "Julie Gierald"
+description: "Julie Gierald: Software Engineer"
 
 # Build settings
 markdown: kramdown
@@ -12,10 +12,10 @@ sass:
 resume_avatar:                  "false"
 resume_name:                    "Julie Gierald"
 resume_title:                   "Software Engineer"
-resume_contact_email:           "julie.gierald@gmail.com"
+resume_contact_email:           "jgierald.jobs@gmail.com"
 resume_contact_telephone:       ""
 resume_contact_address:         ""
-resume_header_contact_info: "Julie Gierald | julie.gierald@gmail.com"
+resume_header_contact_info: "Julie Gierald | jgierald.jobs@gmail.com"
 resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>"
 
 # use "yes" to display the email contact button,
@@ -32,7 +32,7 @@ resume_section_projects:        true
 resume_section_skills:          true
 resume_section_recognition:     true
 #resume_section_links:           true
-resume_section_associations:    true
+#resume_section_associations:    true
 # resume_section_interests:       true
 
 # Resume social links
