--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ resume_contact_email:           "tupone.mattia@gmail.com"
 resume_header_contact_info: "Lanciano (CH), Italy | tupone.mattia@gmail.com"
 resume_header_intro: "<p>I'm a 22 years old SysAdmin/DevOps based in Italy with the passion for IT systems and coding.
 Moving across servers, code, and deployments, I started working as a professional in 2016 gaining and maturing experience
-day-by-day, always looking for new technologies and methods. Experienced and certified by VMware on virtualization
+day-by-day, always looking for new technologies and methods.<br>
+Experienced and certified by VMware on virtualization
 technologies and skilled in Microsoft/Linux environments. <br>
 Looking for a remote DevOps position, not willing to relocate.</p>"
 
