--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ resume_section_associations:    true
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/bhighley/resume-template"
+  resume_github_url:            "https://github.com/bhighley/bhighley.github.io"
   resume_twitter_url:           "https://twitter.com/bill_highley"
   # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
