Reverted Experience to fix build issue

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,16 +1,9 @@
 # Jobs
 # Springfield Nuclear Power Plant
-- company: Hewlett Packard Enterprise
-  position: Social Coding/Inner Source Leader, Sectional Manager and DevOps Practitioner
-  duration: Nov, 2015 &mdash; Present
-  summary: Promoted to provide leadership, inspire innovation and drive change on a global scale.  As a thought leader and program director, enhanced the development community experience though the implementation of DevOps and Inner Source across Hewlett Packard Enterprise.
-
-•	Provided vision and direction for the enablement of research and development teams and to providing them the data and analytics feedback loops to enable them to be world-class innovators.  This is accomplished by teams of highly skills architects and developers that I lead and the transformations enabled via:  Inner Source, Social Coding, DevOps, Docker, Agile, HuBot, test automation, OpenStack and Continuous Integration and Delivery Pipelines, Test Automation and push button deployments to hybrid infrastructure enabling high availability applications
-
-•	Introduced a codified change management framework to maintain audit compliance, drive consistency and reduce friction in the DevOps release pipelines.
-•	Responsible for the development, coordination, management and OD&S of Global IT’s Hardware and Software Engineering portfolio for the Divestiture of HPE’s Enterprise Services (ES) and subsequent integration with CSC.  Provided the same leadership and guidance for the Divestiture or HPE’s Software organization and subsequent integrations with MicroFocus.
-•	Trusted partner of the HPE Research and Development community for the continuous improvement of new product introduction (NPI) by implementing
-
+- company: Springfield Nuclear Power Plant
+  position: Safety Inspector
+  duration: Nov, 1980 &mdash; Present
+  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>Ate lots of donuts</li><li>Fell asleep rarely</li><li>Left promptly at end of day (sometimes earlier)</li></ul>
 
 # Windmill Crank Operator
 - company: Sir Putt-A-Lot's Merrie Olde Fun Centre
