--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Jekyll Resume Template"
-description: "A resume template for Jekyll and GitHub Pages sites."
+title: "Adam Sealey Resume"
+description: "A resume for Adam Sealey"
 
 # Build settings
 markdown: kramdown
@@ -10,13 +10,14 @@ sass:
 
 # Resume settings
 resume_avatar:                  "true"
-resume_name:                    "Homer J. Simpson"
-resume_title:                   "Nuclear Safety Inspector"
-resume_contact_email:           "homerjsimpson@youremailaddress.com"
-resume_contact_telephone:       "555-7334"
-resume_contact_address:         "742 Evergreen Terrace, Springfield"
-resume_header_contact_info: "742 Evergreen Terrace, Springfield | 555-7334 | homerjsimpson@youremailaddress.com"
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>"
+resume_name:                    "Adam Sealey"
+resume_title:                   "Director, Information Security Governance and Metrics"
+resume_contact_email:           "adam.sealey@gmail.com"
+resume_contact_telephone:       "925-709-4565"
+#resume_contact_address:         "742 Evergreen Terrace, Springfield"
+resume_header_contact_info: "925-709-4565 | adam.sealey@gmail.com"
+resume_header_intro: "<p>Experienced Information Security and Analytics leader with a demonstrated history of working in retail, government,
+and higher ed. Strong blend of technical capability with a passion for inspiring teams.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -38,13 +39,13 @@ resume_section_associations:    true
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/jglovier/resume-template"
-  resume_twitter_url:           "http://twitter.com/jglovier"
-  resume_dribbble_url:          "https://dribbble.com/jag"
+  resume_github_url:            "https://github.com/asealey"
+  resume_twitter_url:           "https://twitter.com/adamsealey"
+  #resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
+  resume_linkedin_url:          "https://www.linkedin.com/in/adamsealey/"
   # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://joelglovier.com"
+  resume_website_url:           "http://www.adamsealey.com/resume"
 resume_print_social_links:      true
 
 # Design settings
